# password-manager-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.tester  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CLIENT.md  TODO.md  follow-4-test.md  plan.md
docs/v1/: plan.md  session-ses_1248.md  test.md
docs/v1/v1/: ai-name.md  changes.md
exports/: .gitignore
migrations/20250619000001_create_all_tables/: down.sql  up.sql
migrations/20260621000001_add_users_table/: down.sql  metadata.toml  up.sql
migrations/20260622000001_unique_identity_ip/: down.sql  up.sql
migrations/20260622000002_password_valid_since/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
src/crypto/: encrypt.rs  keys.rs  mod.rs
src/db/: mod.rs
src/domain/: group.rs  identity.rs  mod.rs  password.rs  user.rs
src/routes/: admin.rs  greet.rs  group.rs  mod.rs  passwords.rs  refresh.rs  resign.rs  signin.rs  verify.rs
tests/: api_test.rs
