[package]
name = "password-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
aes-gcm = "0.10"
x25519-dalek = "2"
rand = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
tower_governor = "0.6"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
